--- a/extensions/fotmob/package.json
+++ b/extensions/fotmob/package.json
@@ -46,6 +46,82 @@
           "required": true
         }
       ]
+    },
+    {
+      "name": "player",
+      "title": "Player Detail",
+      "subtitle": "Fotmob",
+      "description": "View detail of a player by player's id",
+      "mode": "view",
+      "arguments": [
+        {
+          "name": "playerId",
+          "type": "text",
+          "description": "Player ID",
+          "placeholder": "Enter player ID",
+          "required": true
+        }
+      ]
+    },
+    {
+      "name": "league-table",
+      "title": "League Table",
+      "subtitle": "Fotmob",
+      "description": "View league table by league's id",
+      "mode": "view",
+      "arguments": [
+        {
+          "name": "leagueId",
+          "type": "text",
+          "description": "League ID",
+          "placeholder": "Enter league ID",
+          "required": true
+        }
+      ]
+    },
+    {
+      "name": "match-detail",
+      "title": "Match Detail",
+      "subtitle": "Fotmob",
+      "description": "View detail of a match by match's id",
+      "mode": "view",
+      "arguments": [
+        {
+          "name": "matchId",
+          "type": "text",
+          "description": "Match ID",
+          "placeholder": "Enter match ID",
+          "required": true
+        }
+      ]
+    },
+    {
+      "name": "search-players",
+      "title": "Search Players",
+      "subtitle": "Fotmob",
+      "description": "Search for players",
+      "mode": "view"
+    },
+    {
+      "name": "search-teams",
+      "title": "Search Teams",
+      "subtitle": "Fotmob",
+      "description": "Search for teams",
+      "mode": "view"
+    },
+    {
+      "name": "favorite-league-tables",
+      "title": "Favorite League Tables",
+      "subtitle": "Fotmob",
+      "description": "View favorite league tables",
+      "mode": "view"
+    },
+    {
+      "name": "favorite-upcoming-matches",
+      "title": "Favorite Upcoming Matches",
+      "subtitle": "Fotmob",
+      "description": "View upcoming matches for favorite teams",
+      "mode": "view"
     }
   ],
   "dependencies": {
