--- a/extensions/fotmob/package.json
+++ b/extensions/fotmob/package.json
@@ -125,17 +125,17 @@
     }
   ],
   "dependencies": {
-    "@raycast/api": "^1.76.0",
-    "@raycast/utils": "^1.16.0"
+    "@raycast/api": "^1.103.0",
+    "@raycast/utils": "^2.0.1"
   },
   "devDependencies": {
-    "@raycast/eslint-config": "^1.0.8",
-    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@types/node": "20.12.7",
-    "@types/react": "18.2.79",
-    "eslint": "^8.51.0",
-    "prettier": "^3.3.1",
-    "typescript": "^5.4.5"
+    "@raycast/eslint-config": "^2.1.1",
+    "@types/node": "22.13.10",
+    "@types/react": "19.0.10",
+    "eslint": "^9.22.0",
+    "prettier": "^3.5.3",
+    "typescript": "^5.8.2",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0"
   },
   "scripts": {
     "build": "ray build -e dist",
