Add pernielsentikaer to contributors
Automatically added pernielsentikaer to contributors

--- a/extensions/fotmob/package.json
+++ b/extensions/fotmob/package.json
@@ -9,7 +9,8 @@
   "contributors": [
     "j3lte",
     "Antitoxic9639",
-    "guztaver"
+    "guztaver",
+    "pernielsentikaer"
   ],
   "categories": [
     "News",
